<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img_circle_another"
        android:contentDescription="@string/action_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_img_tooltip"
        android:minHeight="200dp"
        android:orientation="vertical"
        android:padding="10dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="25dip"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/task_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/cyans"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_code"
                android:textColor="@color/text_view"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/task_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textColor="@color/text_view"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_total"
                android:textColor="@color/text_view"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_info"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:textColor="@color/text_view"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_status"
                android:textColor="@color/text_view"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/task_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_info"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="55dip"
            android:layout_marginStart="55dip"
            android:layout_marginTop="15dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_attention"
                android:textColor="@color/text_view"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/task_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/goldenrod"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>